# Dragonite

./: .gitignore  Orientation_24_Feb_2014_22-37-47_GMT.txt  Path.py  PlotTrace.py  Position.py  README.md  ReadAccFile.py  ReadCompassFile.py  Trace.py  anisodiff.py  clean_data.py  cv.py  cvv.py  feature_extract.py  find_image.py  getGT.py  googlemap.py  graph_sensys.csv  imagehash2.py  index.html  mahattan.py  match.py  match2.py  matching.py  plot.py  plot1.py  poster (2).ppt  ppp.py  prepareJPG.py  printscript.py  readrecordfile.py  running_log.tar.bz2  sensor.py  sim10.sh  test.sh  test1  test2  test60.sh  testplot1.py  total.sh
Log/: .gitignore  10.eps  20.eps  30.eps  40.eps  50.eps  LogReader  LogReader.hs  Makefile  plot.sh  plotMat.gnuplot  test20.sh  test30.sh  test40.sh  test50.sh  test60.sh  traces_10  traces_20  traces_30  traces_40  traces_50  traces_60
PanoStitch/: CMakeCache.txt  Makefile  cmake_install.cmake  main
contour/: .match.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  contour  contour.cpp  fann  fann.cpp  flow  flow.cpp  match  match.cpp
data/: BatteryLevel_24_Feb_2014_15-52-21_GMT.txt  BatteryTemp_18_Feb_2014_14-53-07_GMT.txt  BatteryTemp_24_Feb_2014_15-52-21_GMT.txt  Corrected_Gyroscope_Sensor_18_Feb_2014_14-53-07_GMT.txt  Corrected_Gyroscope_Sensor_24_Feb_2014_15-52-21_GMT.txt  Game_Rotation_Vector_18_Feb_2014_14-53-07_GMT.txt  Game_Rotation_Vector_24_Feb_2014_15-52-21_GMT.txt  GpsNmea_24_Feb_2014_15-52-21_GMT.txt  GpsStatus_24_Feb_2014_15-52-21_GMT.txt  Gravity_24_Feb_2014_15-52-21_GMT.txt  (+18 more)
graphics/: README.md  (+1 more)
(+862 files in other folders)
