CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (Contour)
FIND_PACKAGE(OpenCV REQUIRED)
SET(CMAKE_CXX_COMPILER "clang++")
SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")

SET(SRC
	contour.cpp
)

ADD_EXECUTABLE(contour ${SRC})
TARGET_LINK_LIBRARIES(contour ${OpenCV_LIBS})
