CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (Contour)
FIND_PACKAGE(OpenCV REQUIRED)
SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")

ADD_EXECUTABLE(contour contour.cpp)
TARGET_LINK_LIBRARIES(contour ${OpenCV_LIBS})

ADD_EXECUTABLE(match match.cpp)
TARGET_LINK_LIBRARIES(match ${OpenCV_LIBS})

ADD_EXECUTABLE(fann fann.cpp)
TARGET_LINK_LIBRARIES(fann ${OpenCV_LIBS})
